[package]
name = "bkt"
version = "0.3.0"
authors = ["Michael Diamond <dimo414@gmail.com>"]
description = "CLI to cache subprocess invocations"
repository = "http://github.com/dimo414/bkt"
homepage = "http://bkt.rs/"
license = "MIT"
keywords = ["cache", "caching", "subprocess", "cli", "shell"]
categories = ["caching", "command-line-utilities"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.*",
    "README.md",
    "LICENSE",
]

[features]
# Uses JSON to cache the command and output in a human-readable format, to aid debugging.
debug = ['serde_json']

[dependencies]
anyhow = "1.0"
bincode = "1.3.1"
clap = { version = "2.33.3", default_features = false, features = ["vec_map"] }
humantime = "2.1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dependencies.serde_json]
optional = true
version = "1.0.62"

[dev-dependencies]
filetime = "0.2"
test_dir = "0.1.0"
