[package]
name = "bkt"
# When updating the version number tag the commit in git
# https://rust-lang.github.io/api-guidelines/documentation.html#release-notes-document-all-significant-changes-c-relnotes
version = "0.6.1"
authors = ["Michael Diamond <dimo414@gmail.com>"]
description = "CLI and Rust library for caching subprocess invocations"
repository = "https://github.com/dimo414/bkt"
homepage = "https://bkt.rs/"
license = "MIT"
keywords = ["cache", "caching", "subprocess", "cli", "shell"]
categories = ["caching", "command-line-utilities"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.*",
    "README.md",
    "LICENSE",
]

[features]
# Uses JSON to cache the command and output in a human-readable format, to aid debugging.
debug = ['serde_json']

[dependencies]
anyhow = "1.0"
bincode = "1.3.1"
humantime = "2.1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dependencies.clap]
version = "4.2"
default-features = false
features = ["derive", "env", "error-context", "help", "std", "usage", "wrap_help"]

[dependencies.serde_json]
optional = true
version = "1.0"

[dev-dependencies]
filetime = "0.2"
regex = "1.7"
test_dir = "0.2"
